<resources>
    <string name="app_name">IOPS2.0</string>
    <string name="string_login_screen_text_1">A 6 Digit OTP will be sent via SMS to verify\n your account</string>
    <string name="string_enter_mobile_number">Enter Mobile Number</string>
    <string name="string_mobile">Mobile</string>
    <string name="string_continue_text">Continue</string>
    <string name="string_verification_code">Verification Code</string>
    <string name="please_type_verification_code_sent_to">Please type verification code sent\n to\u0020</string>
    <string name="string_edit_phone_number">Edit Phone Number</string>
    <string name="string_resend_otp">Resend OTP</string>
    <string name="string_resend_code">Resend satisfaction code</string>
    <string name="string_resend_otp_code">Resend verification code</string>
    <string name="string_submit">Submit</string>
    <string name="string_results">Results</string>
    <string name="string_efforts">Efforts</string>
    <string name="symbol_open_bracket">(</string>
    <string name="symbol_close_bracket">)</string>
    <string name="string_add_rota">Add</string>
    <string name="dash_board">Dashboard</string>
    <string name="string_review_information">Review Information</string>
    <string name="string_day_check_title">Day Check</string>
    <string name="total_time_spent">Total time spent</string>
    <string name="string_start_task_check">Start\u0020</string>
    <string name="string_open_issues">Open Issues</string>
    <string name="string_last_visit_details">Last Visit Details</string>
    <string name="string_open">Open</string>
    <string name="string_closed">Closed</string>
    <string name="post_check_text">Post\nCheck</string>
    <string name="strength_check_text">Strength\nCheck</string>
    <string name="site_check_text">Site\nCheck</string>
    <string name="client_check_text">Client\nHandshake</string>
    <string name="string_zero_enclosed_bracket">(0)</string>
    <string name="done_text">Done</string>
    <string name="pending_text">Pending</string>
    <string name="string_complete_task_check">complete \u0020</string>
    <string name="string_complete_post_check">complete Post check</string>
    <string name="prompt_point_at_a_barcode">Point your camera at a barcode</string>
    <string name="prompt_move_camera_closer">Move closer to search</string>
    <string name="string_prompt_searching">Searching&#8230;</string>
    <string name="string_check_post">Check Post</string>
    <string name="string_post_check">Post Check</string>
    <string name="string_post_check_list">Post Check List</string>
    <string name="string_site_check_list">Site Check List</string>
    <string name="string_title"> Title</string>
    <string name="string_eldico_housing"> Eldico housing industries LTD.</string>
    <string name="string_grievances">&#160;Grievances</string>
    <string name="string_grievance">Grievance</string>
    <string name="string_complaints">Complaints</string>
    <string name="string_complaint">Complaint</string>
    <string name="string_poas">PoA’s</string>
    <string name="string_Collection_Due"> Collection Due</string>
    <string name="string_date"> Date</string>
    <string name="string_shortage">Shortage - %1d</string>
    <string name="string_surplus">Surplus - %1d</string>
    <string name="string_strength_full">Strength Full</string>
    <string name="string_activity">Activity</string>
    <string name="string_scan_post">Scan Post</string>
    <string name="string_or">or</string>
    <string name="string_dash_board_units_screen">Dash Board Units SCREEN</string>
    <string name="string_welcome">Welcome</string>
    <string name="string_user">User</string>
    <string name="string_today_task">TODAY’S TASK</string>
    <string name="string_effort_item">Effort Item</string>
    <string name="string_result_item">Result Item</string>
    <string name="string_item">Item</string>
    <string name="string_add_rota1">Auto Rota</string>
    <string name="string_adhoc">Adhoc</string>
    <string name="string_completed">Completed</string>
    <string name="string_rota_compliance"> Rota Compliance\u0020</string>
    <string name="string_dash_board_item">Dash Board Item</string>
    <string name="string_duty_on">Duty On</string>
    <string name="string_duty_off">Duty Off</string>
    <string name="string_product_search_button"> product_search_button</string>
    <string name="post_check_guards_text">Check\nGuards</string>
    <string name="post_check_registers_text">Check\nRegisters</string>
    <string name="post_check_checklist_text">Checklist</string>
    <string name="post_check_guard_check_text">Check Guard</string>
    <string name="post_check_register_check_text">Check Register</string>
    <string name="post_check_add_security_risk_text">Add\nSecurity Risk</string>
    <string name="post_check_add_grievance_text">Add\nGrievance</string>
    <string name="post_check_add_kit_request_text">Add\nKit Request</string>
    <string name="guard_not_available_on_leave_not_on_duty">On Leave / Not on Duty</string>
    <string name="guard_not_available_not_found_at_post">Not Found at Post</string>
    <string name="guard_not_available_sitting_in_wrong_place">Sitting in wrong place</string>
    <string name="guard_not_available_others">others</string>
    <string name="guard_sleeping_status_text">Sleeping</string>
    <string name="scan_id_status_text">Scan Id</string>
    <string name="turn_out_status_text">TurnOut</string>
    <string name="signature_status_text">Signature</string>
    <string name="string_add_task_day_check">Day Checking</string>
    <string name="string_add_task_night_chicking">Night Checking</string>
    <string name="string_add_task_barrack_inspection">Barrack Inspection</string>
    <string name="string_add_task_client_coordination">Client Coordination</string>
    <string name="string_add_task_bill_submission">Bill Submission</string>
    <string name="string_add_task_bill_collection">Bill Collection</string>
    <string name="string_add_task_others">Others</string>
    <string name="string_turn_out_proper_shave">Proper Shave</string>
    <string name="string_turn_out_proper_hair_cut">Proper Haircut</string>
    <string name="string_turn_out_proper_fitting_uniform">Proper Fitting Uniform</string>
    <string name="string_turn_out_proper_shoe_polish">Proper Shoe Polish</string>
    <string name="string_turn_out_identity_card">Identity Card</string>
    <string name="string_turn_out_badge">Badge</string>
    <string name="string_add_task">Add Task</string>
    <string name="string_evaluation_score">Evaluation Score</string>
    <string name="string_fine_added">Fine Added</string>
    <string name="string_scan_gurad_id">Scan Guard-ID</string>
    <string name="string_add_file">add File</string>
    <string name="string_done">Done</string>
    <string name="string_guard_not_available">Guard not Available</string>
    <string name="string_edit_turnout">Edit turnout</string>
    <string name="string_save_changes">save changes</string>
    <string name="string_unit_name">Unit Name</string>
    <string name="string_reason">Reason</string>
    <string name="string_other_task_type">Other Task Type</string>
    <string name="string_select_unit_name">Select Site</string>
    <string name="string_select_barrack_name">Select Barrack</string>
    <string name="string_save_task">save task</string>
    <string name="string_select_reason">Select reason</string>
    <string name="string_start_date">Start Date</string>
    <string name="string_select_date">Select date</string>
    <string name="string_start_time">Start Time</string>
    <string name="string_select_time">Select time</string>
    <string name="string_end_date">End Date</string>
    <string name="string_end_time">End time</string>
    <string name="string_guard_duty_history">GUARD DUTY HISTORY</string>
    <string name="string_at_post">At Post</string>
    <string name="string_at_unit">At Unit</string>
    <string name="string_add_reward">Add Reward</string>
    <string name="string_add_fine">Add Fine?</string>
    <string name="string_add_fine_guard_text">Add Fine</string>
    <string name="string_add_reward_guard_text">Add Reward</string>
    <string name="string_continue_add_sig">Continue to add Signature</string>
    <string name="string_continue_photo_evaluation">Continue Turnout Evaluation</string>
    <string name="string_negative">Negative</string>
    <string name="string_positive">Positive</string>
    <string name="string_turnout">TURNOUT</string>
    <string name="string_turnout_score">Turnout Score</string>
    <string name="string_take_photo">Take Photo</string>
    <string name="string_take_new_photo">TAKE NEW PHOTO</string>
    <string name="string_conform">Confirm</string>
    <string name="string_photo_guard_sleeping">Take a photo of the guard sleeping</string>
    <string name="string_overdue">Overdue</string>
    <string name="string_last_visite_date">Last Visite Date</string>
    <string name="string_authorised_guard">Authorised guards</string>
    <string name="module_name_rota_compliance">Rota Compliance</string>
    <string name="dynamic_string">%1s<![CDATA[<small><small><small><font color=#eda6ab><br>%2s</font></small></small></small>]]></string>
    <string name="dynamic_string2">%1s<![CDATA[<small><font color=#979797><br>%2s</font></small>]]></string>
    <string name="string_inleave">In Leave</string>
    <string name="string_menu_home_location">Home Location</string>
    <string name="string_menu_timeline">Timeline</string>
    <string name="please_enter_remarks">Please Enter Remarks</string>
    <string name="string_add_remarks">Add Remarks</string>
    <string name="target_date">Target Date</string>
    <string name="string_reason_not_met">Reason for \'not meeting client\'</string>
    <string name="string_reason_on_leave">Not on duty</string>
    <string name="string_reason_contact_busy">Contact person is busy</string>
    <string name="string_reason_contact_on_leave">Contact person is on leave</string>
    <string name="string_reason_recent_met">Recently met</string>
    <string name="string_reason_client_denied">Client denied to meet</string>
    <string name="action_menu_dashboard_rota">Dashboard (ROTA)</string>
    <string name="action_menu_units">Units</string>
    <string name="action_menu_performance">Performance</string>
    <string name="action_menu_notifications">Notifications</string>
    <string name="action_menu_annual_kit_replacement">Annual kit Replacement</string>
    <string name="action_menu_recruit">Recruit</string>
    <string name="action_menu_barracks">Barracks</string>
    <string name="action_menu_self_service">Self Service Support</string>
    <string name="action_menu_my_kpis">My KPIs</string>
    <string name="action_menu_issue_management">Grievance Management</string>
    <string name="manual_sync">Manual Sync</string>
    <string name="conveyance">Conveyance</string>
    <string name="string_logout">Logout</string>
    <string name="action_menu_poa">Unit At Risk</string>
    <string name="string_sales_reference">Sales Reference</string>
    <string name="string_sites">Sites</string>
    <string name="string_my_sis">MySiS</string>
    <string name="string_sis_events">Event Tracker</string>
    <string name="string_disbandment">Disbandment</string>
    <string name="string_skip_reason">Please select a reason for skipping</string>
    <string name="skip_qr_na">QR not available</string>
    <string name="skip_forgot_to_close_task">Forgot to close task at location</string>
    <string name="skip_not_at_the_site">You are not at the site</string>
    <string name="string_action_point">Action Point</string>
    <string name="string_work_assigned_to">Work Assigned To</string>
    <string name="hint_select_target_date">Select target date</string>
    <string name="string_poa_type">POA Status Type</string>
    <string name="string_add_poa">Add POA</string>
</resources>