<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.sisindia.ai.android.features.taskcheck.clienthandshake.sheet.NotMetReasonsViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/drawable_top_corner"
        android:paddingTop="@dimen/_8sdp"
        android:paddingBottom="@dimen/_16sdp">

        <View
            android:id="@+id/sliderIcon"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_2sdp"
            android:background="@color/colorTextGrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/labelReasonsList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:text="@string/string_reason_not_met"
            android:textColor="@color/textColorBlackBold"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sliderIcon" />

        <RadioGroup
            android:id="@+id/reasonRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/labelReasonsList"
            app:radioCheckedListener="@{vm.onRadioCheckedListener}">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_reason_on_leave"
                android:textSize="@dimen/_13ssp" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_reason_contact_busy"
                android:textSize="@dimen/_13ssp" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_reason_contact_on_leave"
                android:textSize="@dimen/_13ssp" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_reason_recent_met"
                android:textSize="@dimen/_13ssp" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_reason_client_denied"
                android:textSize="@dimen/_13ssp" />

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_42sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:background="@drawable/border_round_red_body"
            android:gravity="center"
            android:onClick="@{vm::onDoneBtnClick}"
            android:text="@string/string_done"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reasonRadioGroup" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>