<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.sisindia.ai.android.features.onboard.OnBoardViewModel" />
        <import type="android.view.View"/>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/drawable_top_corner"
        android:minHeight="@dimen/_500sdp"
        android:orientation="vertical"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_16sdp">

        <View
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_2sdp"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorTextGrey" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/BlackTitleTextColor14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/string_skip_reason" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            app:radioCheckedListener="@{vm.onRadioCheckedListener}">

            <RadioButton
                style="@style/OnlyFontFamily"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skip_qr_na"
                android:textColor="@color/colorTextGrey"
                android:textSize="@dimen/_13ssp" />

            <RadioButton
                style="@style/OnlyFontFamily"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skip_forgot_to_close_task"
                android:textColor="@color/colorTextGrey"
                android:visibility="@{vm.isSkipAtCheckInTime ? View.GONE : View.VISIBLE}"
                android:textSize="@dimen/_13ssp" />

            <RadioButton
                style="@style/OnlyFontFamily"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skip_not_at_the_site"
                android:textColor="@color/colorTextGrey"
                android:visibility="@{vm.isSkipAtCheckInTime ? View.GONE : View.VISIBLE}"
                android:textSize="@dimen/_13ssp" />

        </RadioGroup>

        <androidx.appcompat.widget.AppCompatButton
            style="@style/RoundedButton"
            android:id="@+id/btnSelectSkipReason"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_44sdp"
            android:background="@drawable/border_red_body"
            android:onClick="@{vm::onViewClick}"
            android:layout_margin="@dimen/_20sdp"
            android:text="@string/string_done"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

</layout>